--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "next": "^9.5.4",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
   },
   "browserslist": {
     "production": [
