--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@vkontakte/icons": "^1.41.0",
     "@vkontakte/vk-bridge": "^2.2.8",
     "@vkontakte/vk-miniapps-deploy": "0.0.17",
-    "@vkontakte/vkui": "^3.12.6",
+    "@vkontakte/vkui": "^3.13.2",
     "axios": "^0.20.0",
     "axios-jsonp": "^1.0.4",
     "babel-eslint": "^10.1.0",
@@ -38,6 +38,7 @@
     "fetch-jsonp": "^1.1.3",
     "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "next": "^9.5.4",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
